--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
 body {
   margin: 0;
-  background-color: #f5f6f8;
+  background-color: white;
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
